Allow drag-n-drop menu to work in Wayland

Previously there were crashes in KIO which appear fixed now.
Still not perfect as it appears the Konsole window loses focus.

BUG: 372348